# NPU

./: .gitignore  README.md  bench_chatbot.py  bench_smollm.py  pyproject.toml  ref_hf.py  smollm.py
npu/: bench_matmul.py  bench_softmax.py  bench_switch.py  fa.py  fa_kernel.cc  fa_ref.py  hello.py  iq3_xxs.py  iq3_xxs_tables.h  linear.py  matmul.py  matmul_mc.py  mlp.py  mlp_kernel.cc  mv.py  mv_kernel.cc  profiler.py  quant_mv.py  quant_mv_iq4.py  quant_mv_iq4_kernel.cc  quant_mv_iq4_packed.py  quant_mv_iq4_packed_kernel.cc  quant_mv_kernel.cc  softmax.py  softmax_kernel.cc  verify_layer.py
plans/: 01-fa-decode.md
qwen/: compare.py  forward.py  inspect_gguf.py  model.py  ref_llama.py  run.py  test_dequant.py  test_npu_attn_o.py  test_npu_attn_qkv.py  test_npu_experts.py  test_npu_generate5.py  test_npu_iq4_packed.py  test_npu_routed_moe.py  test_npu_router.py  test_npu_shexp.py  test_npu_shexp_fused.py  test_npu_ssm.py
