[project]
name = "npu"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "safetensors",
    "huggingface-hub",
    "numpy",
    "mlir-aie",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
mlir-aie = { url = "https://github.com/Xilinx/mlir-aie/releases/download/v1.3.1/mlir_aie-1.3.1-cp312-cp312-manylinux_2_35_x86_64.whl" }
