[project]
name = "npu"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "transformers",
    "safetensors",
    "huggingface-hub",
    "numpy",
    "mlir-aie",
    "llvm-aie",
    "gguf>=0.18.0",
    "llama-cpp-python>=0.3.20",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
mlir-aie = { url = "https://github.com/Xilinx/mlir-aie/releases/download/v1.3.1/mlir_aie-1.3.1-cp312-cp312-manylinux_2_35_x86_64.whl" }
llvm-aie = { url = "https://github.com/Xilinx/llvm-aie/releases/download/nightly/llvm_aie-21.0.0.2026042201%2B24108bc9-py3-none-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl" }
